# TRASH-compactor

./: .gitignore  .script.py.swp  README.md  analyse_hor_csv.py  analyse_repeat_csv.py  hor_viewer.py  hors_formed_plot.py  input_table.tsv  pyproject.toml  repeats.py  script.py  snv_per_kbp_plot.py  summary.tsv  test_data.csv  test_genome_6m.fa  utils.py
horhouse/: __init__.py  __main__.py  cli.py  utils.py
trash_compactor/: __init__.py  __main__.py  cli.py  repeats.py  utils.py
