[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trash-compactor"
version = "0.1.0"
description = "Interactive tool for analyzing Higher Order Repeats from TRASH output"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.24.0",
    "python-Levenshtein>=0.12.0",
]

[project.scripts]
trash-compactor = "trash_compactor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trash_compactor*"]
